# kodeks24_project

./: .gitignore  Makefile  pyproject.toml
apps/: admin.py  pagination.py  serializers.py  tasks.py  urls.py  views.py
apps/models/: __init__.py  base.py  managers.py  products.py  users.py
root/: celery.py  settings.py  urls.py
